// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a pagination component 1`] = `
.c1 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  z-index: 1060;
}

.c4 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c7 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c7:focus {
  outline: none;
}

.c7[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c7 + .bd-button {
  margin-top: 0.5rem;
}

.c7:active {
  background-color: #DBE3FE;
}

.c7:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c7:hover:not(:active) {
  background-color: #F0F3FF;
}

.c7[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c12 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c12:focus {
  outline: none;
}

.c12[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c12 + .bd-button {
  margin-top: 0.5rem;
}

.c12:active {
  background-color: #DBE3FE;
}

.c12:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c12:hover:not(:active) {
  background-color: #F0F3FF;
}

.c12[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c9 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c11 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c6 {
  position: relative;
}

.c8 {
  color: #313440;
  width: auto;
}

.c3 {
  margin-left: auto;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.75rem 1.5rem;
}

@media (min-width:720px) {
  .c7 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c7 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c12 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c12 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  aria-controls=":r12:"
  class="c0"
>
  <div
    class="c1 c2 c3"
  >
    <div
      aria-label="pagination"
      class="c1 c4"
      role="navigation"
    >
      <div
        class="c1 c5"
      >
        <div
          class="c1 c6"
        >
          <button
            aria-activedescendant=""
            aria-controls=":r13:-menu"
            aria-expanded="false"
            aria-haspopup="menu"
            class="c7 c8"
            id=":r13:-toggle-button"
            role="button"
            tabindex="0"
            type="button"
          >
            <span
              class="c9"
            >
              1 - 3 of 5
              <svg
                aria-hidden="true"
                class="hNTNsv"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="m8.71 11.71 2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71"
                />
              </svg>
            </span>
          </button>
          <div
            class="c10"
            style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px);"
          >
            <ul
              aria-labelledby=":r13:-label"
              class="c11"
              id=":r13:-menu"
              role="menu"
            />
          </div>
        </div>
      </div>
      <div
        class="c1 c5"
      >
        <button
          class="c12 c8"
          disabled=""
          type="button"
        >
          <span
            class="c9"
          >
            <svg
              aria-labelledby=":r16:"
              class="brjSIf"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <title
                id=":r16:"
              >
                Previous page
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"
              />
            </svg>
          </span>
        </button>
        <button
          class="c12 c8"
          type="button"
        >
          <span
            class="c9"
          >
            <svg
              aria-labelledby=":r17:"
              class="brjSIf"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <title
                id=":r17:"
              >
                Next page
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a simple table 1`] = `
.c2 {
  box-sizing: border-box;
}

.c3 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D9DCE9;
  border-top: 1px solid #D9DCE9;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  padding: 0.75rem;
  white-space: nowrap;
}

.c1:first-of-type {
  padding-left: 1.5rem;
}

.c1:last-of-type {
  padding-right: 1.5rem;
}

.c4 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  padding: 0.75rem;
  border-bottom: 1px solid #D9DCE9;
}

.c6:first-of-type {
  padding-left: 1.5rem;
}

.c6:last-of-type {
  padding-right: 1.5rem;
}

.c5 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  display: table-row;
  background-color: transparent;
}

.c5:hover {
  background-color: #F6F7FC;
}

.c0 {
  border-color: transparent;
  border-spacing: 0;
  color: #313440;
  text-align: left;
  width: 100%;
}

<table
  class="c0"
  id=":r0:"
>
  <thead
    class=""
  >
    <tr>
      <th
        class="c1"
        id="header-cell-0"
      >
        <div
          class="c2 c3 c4"
        >
          Sku
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-1"
      >
        <div
          class="c2 c3 c4"
        >
          Name
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-2"
      >
        <div
          class="c2 c3 c4"
        >
          Stock
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    class=""
  >
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        SM13
      </td>
      <td
        class="c6"
      >
        [Sample] Smith Journal 13
      </td>
      <td
        class="c6"
      >
        25
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        DPB
      </td>
      <td
        class="c6"
      >
        [Sample] Dustpan & Brush
      </td>
      <td
        class="c6"
      >
        34
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        OFSUC
      </td>
      <td
        class="c6"
      >
        [Sample] Utility Caddy
      </td>
      <td
        class="c6"
      >
        45
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        CLC
      </td>
      <td
        class="c6"
      >
        [Sample] Canvas Laundry Cart
      </td>
      <td
        class="c6"
      >
        2
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        CGLD
      </td>
      <td
        class="c6"
      >
        [Sample] Laundry Detergent
      </td>
      <td
        class="c6"
      >
        29
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders a table figure 1`] = `
.c0 {
  margin: 0;
  max-width: 100%;
  overflow-x: auto;
  white-space: nowrap;
}

@media (min-width:720px) {
  .c0 {
    white-space: normal;
  }
}

<figure
  class="c0"
/>
`;

exports[`selectable renders selectable actions and checkboxes 1`] = `
.c1 {
  margin-right: 0.25rem;
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c14 {
  margin-right: 1rem;
  box-sizing: border-box;
}

.c4 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c11 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c11:last-child {
  margin-bottom: 0;
}

.c13 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin-left: 0.75rem;
}

.c13:last-child {
  margin-bottom: 0;
}

.c15 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0;
}

.c15:last-child {
  margin-bottom: 0;
}

.c12 {
  cursor: pointer;
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c10 {
  margin-left: 0.5rem;
}

.c5 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c9 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: border-color,background,box-shadow,color,opacity;
  transition-property: border-color,background,box-shadow,color,opacity;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
}

.c9:hover {
  border-color: #B4BAD1;
}

.c6:focus + .c8 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c9 svg {
  opacity: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.75rem 1.5rem;
}

<div
  aria-controls=":r1k:"
  class="c0"
>
  <div
    class="c1 c2"
  >
    <div
      class="c3 c4"
    >
      <div
        class="c5"
      >
        <input
          aria-checked="false"
          aria-labelledby=":r1m:"
          class="c6 c7"
          id=":r1l:"
          type="checkbox"
        />
        <label
          aria-hidden="true"
          class="c8 c9"
          for=":r1l:"
        >
          <svg
            aria-hidden="true"
            class="brjSIf"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
            />
          </svg>
        </label>
        <div
          class="c10"
        >
          <label
            class="c11 c12"
            for=":r1l:"
            hidden=""
            id=":r1m:"
          >
            Select All
          </label>
        </div>
      </div>
      <p
        class="c13"
      >
        5
      </p>
    </div>
  </div>
  <div
    class="c14 c2"
  >
    <p
      class="c15"
    >
      Product
    </p>
  </div>
</div>
`;
